--- a/richu_web/index.html
+++ b/richu_web/index.html
@@ -131,7 +131,7 @@
             >95<span class="text">%销售至终端客户</span></span
           >
         </div>
-        <a href="project.html?action=fenXiaoJingYing" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="1.2s">查看更多</a>
+        <a href="project-distribution.html" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="1.2s">查看更多</a>
       </div>
     </section>
 
@@ -160,7 +160,7 @@
           <div>农药熏蒸剂：地美地丰®</div>
           <div>原生态药材：三七及其系列产品</div>
         </div>
-        <a href="project.html?action=ZhiWuBaoHu" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="0.9s">查看更多</a>
+        <a href="project-plant.html" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="0.9s">查看更多</a>
       </div>
     </section>
 
@@ -191,7 +191,7 @@
             3,6-二氯哒嗪&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2,6-二氯吡嗪
           </div>
         </div>
-        <a href="project.html?action=DongWuJianKang" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay=".9s">查看更多</a>
+        <a href="project.html" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay=".9s">查看更多</a>
       </div>
     </section>
 
@@ -258,7 +258,7 @@
             </div>
           </div>
         </div>
-        <a href="project.html?action=GuoJiMaoYi" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="1.2s">查看更多</a>
+        <a href="project-trade.html" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="1.2s">查看更多</a>
       </div>
     </section>
 
@@ -285,7 +285,7 @@
             醋酸乙酯、醋酸丁酯、异丙醇、醋酸正丙酯、醋酸异丙酯、正丙醇、1，2-己二醇、异已烷、环己酮、N,N-二甲基甲酰胺、丙二醇、丙二醇甲醚醋酸酯、N-甲基吡咯烷酮、四氢呋喃、磷酸三苯酯、二氯甲烷、三氯乙烯、四氯乙烯、苯甲醇。
           </div>
         </div>
-        <a href="project.html?action=fenXiaoJingYing" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay=".9s">查看更多</a>
+        <a href="project-distribution.html" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay=".9s">查看更多</a>
       </div>
     </section>
 
