--- a/richu_web/project-plant.html
+++ b/richu_web/project-plant.html
@@ -73,16 +73,16 @@
     <section class="project-top-banner">
       <div
         class="banner-item active"
-        style="background: url('./assets/img/bull-cattle-cavalry-841303@2x.jpg');"
+        style="background: url('./assets/img/tu1368-2.jpg');"
       ></div>
     </section>
 
     <section class="project-tab-container">
       <div class="project-tab">
-        <a href="project.html" class="proj-tab-item active">
+        <a href="project.html" class="proj-tab-item">
           <span class="animate">动物健康</a>
         </a>
-        <a href="project-plant.html" class="proj-tab-item">
+        <a href="project-plant.html" class="proj-tab-item active">
           <span class="animate">植物保护</a>
         </a>
         <a href="project-distribution.html" class="proj-tab-item">
@@ -97,19 +97,19 @@
 
         <div class="proj-content-item active">
           <div class="title-wrap">
-            <div class="en-title">Animal Health</div>
-            <div class="cn-title">动物健康</div>
+            <div class="en-title">Plant Protection</div>
+            <div class="cn-title">植物保护</div>
           </div>
           <div class="content-tab-wrap">
             <div class="content-tab">
-              <div class="content-tab-item active">浙江日出药业</div>
-              <div class="content-tab-item">英国分公司</div>
+              <div class="content-tab-item active">临海市建新化工</div>
+              <div class="content-tab-item">云南日出药业</div>
             </div>
             <div class="content-detail"
               style="background-image: url('./assets/img/wave_three@2x.png');">
 
               <div class="content-detail-item active">
-                <div class="fx-title">浙江日出药业有限公司</div>
+                <div class="fx-title">临海市建新化工有限公司</div>
                 <div class="fx-content">
                   联合国特许溴甲烷专业企业，主营溴甲烷及其系列衍生产品，专供海关检疫和医药、农药的合成加工；新型土壤熏蒸剂地美地丰®的生产与研究。
                 </div>
@@ -122,50 +122,9 @@
                     <img src="./assets/img/tu842.jpg" alt="">
                   </div>
                 </div>
-
+                
                 <div class="fx-title-en">Product</div>
                 <div class="fx-title">产品</div>
-                <!-- 产品分类下拉框 -->
-                <!-- <div class="rc-proj-select-wrap">
-                  <div class="btn-cir-green animate">
-                    <span class="select-value-text">全部</span>
-                    <span class="drop-down-icon"></span>
-                  </div>
-                  <div class="rc-proj-select-container">
-                    <ul class="rc-proj-select">
-                      <li class="rc-proj-option" title="全部" data-value="全部">
-                        全部
-                      </li>
-                      <li class="rc-proj-option" title="选项一" data-value="选项一">
-                        选项一
-                      </li>
-                      <li class="rc-proj-option" title="Opt2" data-value="Opt2">
-                        Opt2
-                      </li>
-                      <li class="rc-proj-option" title="选项三" data-value="选项三">
-                        选项三
-                      </li>
-                      <li class="rc-proj-option" title="选项四" data-value="选项四">
-                        选项四
-                      </li>
-                      <li
-                        class="rc-proj-option"
-                        title="长选项选项五长选项选项五长选项选项五长选项选项五"
-                        data-value="长选项选项五长选项选项五长选项选项五长选项选项五"
-                      >
-                        长选项选项五长选项选项五长选项选项五长选项选项五
-                      </li>
-                      <li
-                        class="rc-proj-option"
-                        title="选项6选项6选项6选项6选项6选项6"
-                        data-value="选项6选项6选项6选项6选项6选项6"
-                      >
-                        选项6选项6选项6选项6选项6选项6
-                      </li>
-                    </ul>
-                  </div>
-                </div> -->
-                <!-- 产品分类下拉框 end -->
                 <div class="fx-project-wrap">
                   <div class="fx-project-sq-row">
                     <div class="sq-item"><span class="cn">溴甲烷</span></div>
@@ -339,36 +298,51 @@
               <div class="content-detail-item">
                 <div class="company-info-row">
                   <div class="row-left">
-                    <div class="company-name">英国分公司</div>
-                    <div class="company-desc">Ground Animal Health，欧盟兽药制剂上市许可持有人——MAH；产品：甲基吡啶磷可湿性粉-50，商品名：Azasure，甲基吡啶磷可湿性粉-10，用于杀灭苍蝇；3,6-二氯哒嗪，磺胺类杀菌药中间体；2,6-二氯吡嗪：磺胺类抗球虫药中间体。</div>
+                    <div class="company-name">云南日出药业有限公司</div>
+                    <div class="company-desc">原生态种植基地位于中国三七之乡--云南文山州。致力于标准化种植三七和药用价值深加工系列产品；新建近千亩高效土壤示范种植基地和连茬熏蒸消毒技术研究所。</div>
                   </div>
                   <div class="row-right">
-                    <img src="./assets/img/hanson-lu-HpTHxffckwI-unsplash@2x.jpg" alt="">
-                    <img src="./assets/img/drew-farwell-9vkJPfh9Anw-unsplash@2x.jpg" alt="">
+                    <img src="./assets/img/tu1371.jpg" alt="">
+                    <img src="./assets/img/tu1370.jpg" alt="">
                   </div>
                 </div>
-                <div class="verify-title">资质认证</div>
-                <div class="verify-pic-row">
-                  <div class="two-a4-image">
-                    <div class="a4-item"><img src="./assets/img/di-san-fang.jpg" alt=""></div>
-                    <div class="a4-item"><img src="./assets/img/er-wu.jpg" alt=""></div>
+                <div class="company-product-wrap">
+                  <div class="title-en-sm">Product</div>
+                  <div class="title-cn-sm">产品</div>
+                  <div class="product-rwo">
+                    <div class="left-content">
+                      <div class="c-title">三七</div>
+                      <div class="c-content">
+                        <div>原生态药材，五加科人参属植物，有“金不换”、“南国神草” 等美誉，是我国特有的名贵中药材，具有散瘀止血，消肿定痛之功效，传统上主要.应用于人体内外各种出血之症及跌打损伤、瘀滞肿痛，适用于”三高”人群。</div>
+                        <div>明代药物学家李时珍《本草纲目》中记载，“三七能知- -切血病”;《本 草纲目拾遗》称“人参补气第一，三七补血第一，味同而功亦等，故称人参三七，为中药之最珍贵者。</div>
+                      </div>
+                    </div>
+                    <div class="right-img">
+                      <div class="img-wrap">
+                        <img src="./assets/img/tu1362.jpg" alt="">
+                      </div>
+                    </div>
                   </div>
-                  <div class="right-table">
-                    <div class="table-col">
-                      <div class="title">Product Name</div>
-                      <div class="detail-row">Azasure vet</div>
+                  <div class="product-rwo">
+                    <div class="left-content">
+                      <div class="c-title">三七形态特征</div>
+                      <div class="c-content">
+                        <div>● &nbsp;&nbsp;三七根</div>
+                        <div>三七根为肉质根，成微黄色，皮上有不规则细纹。三七根包括主根、支根和须根，通常所说的三七是指主根</div>
+                        <div>● &nbsp;&nbsp;三七茎</div>
+                        <div>三七茎包括地上茎和地下茎两部分。地下鉴又称剪口，位于根的.上端，地上茎在越冬时从根茎上脱落，根茎上留有茎痕，可根据茎痕判断三七生长年限</div>
+                        <div>● &nbsp;&nbsp;三七叶</div>
+                        <div>三七为掌状复叶，三七叶片多为长椭圆形，先端渐尖，基部近圆形，叶缘有细密锯齿</div>
+                        <div>● &nbsp;&nbsp;三七花</div>
+                        <div>三七二年开花，伞形花序，上着小花50-80朵不等</div>
+                        <div>● &nbsp;&nbsp;三七叶子</div>
+                        <div>三七种子红色盒装浆果，肾行或球形，少数为三桠行。三期从而年生开始开花结果，种子成熟的时间在10月-12月</div>
+                      </div>
                     </div>
-                    <div class="table-col">
-                      <div class="title">Descriptions of the License /  Marketing Authorisation</div>
-                      <div class="detail-row">Vm 42016/4000</div>
-                      <div class="detail-row">MT nr. 13-9411</div>
-                      <div class="detail-row">Norway</div>
-                    </div>
-                    <div class="table-col">
-                      <div class="title">Country</div>
-                      <div class="detail-row">The United Kingdom</div>
-                      <div class="detail-row">J. nr.613-20140001-1</div>
-                      <div class="detail-row">The Faroe Islands</div>
+                    <div class="right-img">
+                      <div class="img-wrap">
+                        <img src="./assets/img/tu1364.jpg" alt="">
+                      </div>
                     </div>
                   </div>
                 </div>
