--- a/richu_web/project.html
+++ b/richu_web/project.html
@@ -126,7 +126,7 @@
                 <div class="fx-title-en">Product</div>
                 <div class="fx-title">产品</div>
                 <!-- 产品分类下拉框 -->
-                <!-- <div class="rc-proj-select-wrap">
+                <div class="rc-proj-select-wrap">
                   <div class="btn-cir-green animate">
                     <span class="select-value-text">全部</span>
                     <span class="drop-down-icon"></span>
@@ -164,14 +164,14 @@
                       </li>
                     </ul>
                   </div>
-                </div> -->
+                </div>
                 <!-- 产品分类下拉框 end -->
                 <div class="fx-project-wrap">
                   <div class="fx-project-sq-row">
-                    <div class="sq-item"><span class="cn">溴甲烷</span></div>
-                    <div class="sq-item"><span class="cn">三甲基溴化亚砜</span></div>
-                    <div class="sq-item"><span class="cn">三甲基溴化锍</span></div>
-                    <div class="sq-item"><span class="cn">地美地丰</span></div>
+                    <div class="sq-item" data-value="选项一"><span class="cn">溴甲烷</span></div>
+                    <div class="sq-item" data-value="Opt2"><span class="cn">三甲基溴化亚砜</span></div>
+                    <div class="sq-item" data-value="选项三"><span class="cn">三甲基溴化锍</span></div>
+                    <div class="sq-item" data-value="选项三"><span class="cn">地美地丰</span></div>
                   </div>
                   <div class="fx-project-detail-pos">
                     <div class="fx-project-detail-window">
