--- a/richu_web/search.html
+++ b/richu_web/search.html
@@ -126,10 +126,10 @@
       <div class="s-keyword">丙</div>
       <div class="fx-project-wrap">
         <div class="fx-project-sq-row">
-          <div class="sq-item">
+          <div class="sq-item" data-value="选项一">
             <span class="cn">丙烯酸甲酯</span><span class="en">C4H6O2</span>
           </div>
-          <div class="sq-item">
+          <div class="sq-item" data-value="选项三">
             <span class="cn">丙烯酸乙酯</span><span class="en">C5H8O2</span>
           </div>
         </div>
