--- a/richu_web/about.html
+++ b/richu_web/about.html
@@ -70,10 +70,9 @@
     </header>
     <!-- 头部 end -->
 
-    <section
-      class="about-top-banner"
-      style="background-image: url('./assets/img/nicolas-j-leclercq-3cweyzh4RCg-unsplash.jpg');"
-    ></section>
+    <section class="about-top-banner" >
+      <img class="banner-img" src="./assets/img/nicolas-j-leclercq-3cweyzh4RCg-unsplash.jpg" alt="" />
+    </section>
 
     <section class="about-tab-container">
       <div class="a-tab-item active" data-id="RiChuAbout">
