--- a/richu_web/contact.html
+++ b/richu_web/contact.html
@@ -70,10 +70,9 @@
     </header>
     <!-- 头部 end -->
 
-    <section
-      class="about-top-banner"
-      style="background-image: url('./assets/img/banner-984@2x.png');"
-    ></section>
+    <section class="about-top-banner" >
+      <img class="banner-img" src="./assets/img/banner-984@2x.png" alt="" />
+    </section>
 
     <section class="contact-tab-container">
       <div class="title-wrap">
