--- a/richu_web/culture.html
+++ b/richu_web/culture.html
@@ -70,7 +70,8 @@
     </header>
     <!-- 头部 end -->
 
-    <section class="about-top-banner" style="background-image: url('./assets/img/helloquence-5fNmWej4tAA-unsplash@2x.jpg');">
+    <section class="about-top-banner" >
+      <img class="banner-img" src="./assets/img/helloquence-5fNmWej4tAA-unsplash@2x.jpg" alt="" />
     </section>
 
     <section class="culture-tab-container">
