--- a/richu_web/news-detail.html
+++ b/richu_web/news-detail.html
@@ -70,10 +70,9 @@
     </header>
     <!-- 头部 end -->
 
-    <section
-      class="about-top-banner"
-      style="background-image: url('./assets/img/news-banner.jpg');"
-    ></section>
+    <section class="about-top-banner" >
+      <img class="banner-img" src="./assets/img/news-banner.jpg" alt="" />
+    </section>
 
     <section class="news-detail-path news-container">
       <span>首页 > 新闻中心 > </span>
