--- a/richu_web/news.html
+++ b/richu_web/news.html
@@ -70,10 +70,9 @@
     </header>
     <!-- 头部 end -->
 
-    <section
-      class="about-top-banner"
-      style="background-image: url('./assets/img/news-banner.jpg');"
-    ></section>
+    <section class="about-top-banner" >
+      <img class="banner-img" src="./assets/img/news-banner.jpg" alt="" />
+    </section>
 
     <section class="top-news-wrap news-container">
       <div class="left-content">
@@ -240,9 +239,8 @@
         </a>
         <a class="c-btn-more animate" href="news-detail.html">查看更多</a>
       </div>
-      <!-- 每行3个 不足时用空的 news-item-wrap 补齐来对齐
-      <div class="news-item-wrap"></div>
-       -->
+      <!-- 空占位元素 -->
+      <div class="news-item-wrap" style="height: 1px; margin:0"></div>
     </section>
 
     <section class="news-pagination">
