--- a/richu_web/search.html
+++ b/richu_web/search.html
@@ -70,10 +70,9 @@
     </header>
     <!-- 头部 end -->
 
-    <section
-      class="about-top-banner"
-      style="background-image: url('./assets/img/christ-the-redeemer-2868242@2x.jpg');"
-    ></section>
+    <section class="about-top-banner" >
+      <img class="banner-img" src="./assets/img/christ-the-redeemer-2868242@2x.jpg" alt="" />
+    </section>
 
     <section class="search-container">
       <div class="search-input-row">
