--- a/richu_web/project-plant.html
+++ b/richu_web/project-plant.html
@@ -70,11 +70,8 @@
     </header>
     <!-- 头部 end -->
 
-    <section class="project-top-banner">
-      <div
-        class="banner-item active"
-        style="background: url('./assets/img/tu1368-2.jpg');"
-      ></div>
+    <section class="about-top-banner project-top-banner" >
+      <img class="banner-img" src="./assets/img/tu1368-2.jpg" alt="" />
     </section>
 
     <section class="project-tab-container">
